2009-03-07  Daniel Leidert <daniel.leidert@wgdd.de>

	* include/iconv.h, src/formats/xml/iconv.h, src/strncasecmp.c: Fixed
	FSF address.

2009-03-02  Daniel Leidert <daniel.leidert@wgdd.de>

	* doc/babel.1, doc/obchiral.1, doc/obconformer.1, doc/obenergy.1,
	doc/obfit.1, doc/obgen.1, doc/obgrep.1, doc/obminimize.1,
	doc/obprobe.1, doc/obprop.1, doc/obrotamer.1, doc/obrotate.1,
	doc/roundtrip.1: Prevent hyphenation of URLs. Fixed an mdoc issue.

2009-03-02  Daniel Leidert <daniel.leidert@wgdd.de>

	* src/formats/smilesformat.cpp: Correct use of sprintf().
	http://lists.debian.org/debian-devel/2008/12/msg01079.html

2009-03-02  Chris Morley

	Added xtcformat,pqrformat,opendxformat to Visual Studio build.
	Could not add gamessukformat because it uses <regex.h>
	and did not have time to find a workaround (Boost probably).
	 
2009-03-01  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/residue.cpp, src/fingerprint.cpp, src/zipstreamimpl.h,
	src/obconversion.cpp, src/dlhandler_unix.cpp,
	src/formats/rxnformat.cpp, src/formats/fchkformat.cpp,
	tools/babel.cpp, include/openbabel/xml.h,
	include/openbabel/obconversion.h,
	include/openbabel/obmolecformat.h, include/openbabel/data.h:
	Fix #includes to handle GCC-4.3 and 4.4. Thanks to Rathann
	Mierzejewski.

	* src/pointgroup.cpp, src/formats/xtcformat.cpp: Remove calls to
	exit() uncovered by Rathann.

2009-02-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/mol.cpp (Separate): Fix crash with Separate
	(PR#2553217). Currently uses defensive programming. This
	particular test file seems to have problems. 

2009-02-24  Marcus D. Hanwell  <marcus@cryos.org>

	* src/grid.cpp: Fixed some off by one errors in the way the max vector
	and spacing were calculated. More work is needed to make this work
	with grids aligned along arbitrary axes.

2009-02-27  Kevin Shepherd <kshepherd1@users.sourceforge.net>
	
	* src/formats/acrformat.cpp, src/formats/carformat.cpp